Sun Feb 19 23:18:09 GMT 2006  Olly Betts <olly@survex.com>

	* include/Makefile.am,include/xapian/: Flag deprecated methods such
	  that the compiler gives a warning, for compilers which support
	  such a feature.

Sun Feb 19 22:58:55 GMT 2006  Olly Betts <olly@survex.com>

	* COPYING: Update second occurrence of old FSF address.

Sun Feb 19 22:46:49 GMT 2006  Olly Betts <olly@survex.com>

	* README: Add pointer to HACKING.  Change "CVS access" to "SVN
	  access".

Sun Feb 19 01:46:00 GMT 2006  Olly Betts <olly@survex.com>

	* api/version.cc: Correct typo in name of function xapian_revision().

Thu Feb 16 10:23:59 GMT 2006  Olly Betts <olly@survex.com>

	* xapian-config.in: Oops, fix previous fix (I'd pasted the substituted
	  result from testing the patch...)

Thu Feb 16 10:16:31 GMT 2006  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated from tinderbox.

Thu Feb 16 10:15:51 GMT 2006  Olly Betts <olly@survex.com>

	* xapian-config.in: Need to set exec_prefix and prefix at top of
	  script as they're used by various @SUBSTITUTIONS@.

Thu Feb 16 00:09:34 GMT 2006  Olly Betts <olly@survex.com>

	* NEWS,PLATFORMS,configure.ac: Updated for 0.9.3.

Wed Feb 15 21:58:23 GMT 2006  Olly Betts <olly@survex.com>

	* xapian-config.in: Fix option loop to work on shells other than bash.

Wed Feb 15 21:38:38 GMT 2006  Olly Betts <olly@survex.com>

	* include/xapian/database.h: Tweak wording of a documentation comment.

Wed Feb 15 21:34:55 GMT 2006  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Fix documentation comments for the
	  values of QueryParser::feature_flag so doxygen actually pulls out
	  the documentation for them.  Add documentation for the parameters
	  of QueryParser::parse_query().

Wed Feb 15 21:26:48 GMT 2006  Olly Betts <olly@survex.com>

	* bin/quartzcheck.cc: If the database is too broken to open, emit a
	  warning message and bump the error count.

Wed Feb 15 21:23:38 GMT 2006  Olly Betts <olly@survex.com>
